--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,17 @@
-h1 {
-  color: red;
+* {
+  box-sizing: border-box;
+}
+
+.gameboard {
+  display: inline-block;
+}
+
+.row {
+  display: flex;
+}
+
+.cell {
+  border: 1px solid black;
+  width: 20px;
+  height: 20px;
 }
