--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,11 @@
 
 .gameboard {
   display: inline-block;
+  padding: 1rem;
+}
+
+.gameboard-content {
+  background-color: #235b9a;
 }
 
 .row {
@@ -11,7 +16,11 @@
 }
 
 .cell {
-  border: 1px solid black;
+  border: 1px solid #d3d3d3;
   width: 20px;
   height: 20px;
+}
+
+.cell.has-ship {
+  background-color: gray;
 }
